--- a/calibrationwindow.ui
+++ b/calibrationwindow.ui
@@ -22,6 +22,19 @@
      <height>80</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QGroupBox {
+    border: 1px solid gray;
+    border-radius: 3px;
+    margin-top: 0.5em;
+}
+
+QGroupBox::title {
+    subcontrol-origin: margin;
+    left: 10px;
+    padding: 0 3px 0 3px;
+}</string>
+   </property>
    <property name="title">
     <string>Select Load Cell</string>
    </property>
