--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -39,7 +39,7 @@ QGroupBox::title {
     <property name="title">
      <string>Session Controls</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>20</x>
@@ -104,7 +104,7 @@ QGroupBox::title {
     <property name="title">
      <string>Session Indentification and Setup Information</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>280</x>
@@ -130,7 +130,7 @@ QGroupBox::title {
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -185,7 +185,7 @@ QGroupBox::title {
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>71</x>
@@ -221,7 +221,7 @@ QGroupBox::title {
      <property name="title">
       <string>When Saving Data</string>
      </property>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -247,7 +247,7 @@ QGroupBox::title {
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>30</x>
@@ -273,12 +273,8 @@ QGroupBox::title {
        </item>
       </layout>
      </widget>
-     <zorder></zorder>
-     <zorder></zorder>
-     <zorder>radioButton_3</zorder>
-     <zorder>radioButton_3</zorder>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -313,7 +309,7 @@ QGroupBox::title {
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -367,14 +363,12 @@ QGroupBox::title {
       </item>
      </layout>
     </widget>
-    <zorder></zorder>
-    <zorder></zorder>
-    <zorder></zorder>
-    <zorder></zorder>
     <zorder>layoutWidget</zorder>
-    <zorder></zorder>
+    <zorder>layoutWidget</zorder>
+    <zorder>layoutWidget</zorder>
+    <zorder>layoutWidget</zorder>
     <zorder>groupBox_2</zorder>
-    <zorder></zorder>
+    <zorder>layoutWidget</zorder>
    </widget>
    <widget class="QGroupBox" name="groupBox_4">
     <property name="geometry">
@@ -488,6 +482,11 @@ QGroupBox::title {
        <height>20</height>
       </rect>
      </property>
+     <property name="styleSheet">
+      <string notr="true">QLineEdit { 
+background: rgb(237, 237, 237); 
+}</string>
+     </property>
     </widget>
     <widget class="QCheckBox" name="checkBox">
      <property name="geometry">
@@ -502,7 +501,7 @@ QGroupBox::title {
       <string>Sensor</string>
      </property>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>100</x>
@@ -548,7 +547,7 @@ QGroupBox::title {
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>20</x>
@@ -594,7 +593,7 @@ QGroupBox::title {
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>190</x>
