--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -212,8 +212,8 @@ QGroupBox::title {
     <widget class="QGroupBox" name="groupBox_2">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>270</y>
+       <x>60</x>
+       <y>280</y>
        <width>241</width>
        <height>111</height>
       </rect>
@@ -277,9 +277,9 @@ QGroupBox::title {
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>410</y>
-       <width>241</width>
+       <x>80</x>
+       <y>420</y>
+       <width>201</width>
        <height>25</height>
       </rect>
      </property>
@@ -298,7 +298,13 @@ QGroupBox::title {
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit_7"/>
+       <widget class="QLineEdit" name="usingPortDisp">
+        <property name="styleSheet">
+         <string notr="true">QLineEdit { 
+background: rgb(245, 245, 245); 
+}</string>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QPushButton" name="portSelectButton">
@@ -314,7 +320,7 @@ QGroupBox::title {
       <rect>
        <x>10</x>
        <y>180</y>
-       <width>321</width>
+       <width>351</width>
        <height>71</height>
       </rect>
      </property>
@@ -484,7 +490,7 @@ QGroupBox::title {
      </property>
      <property name="styleSheet">
       <string notr="true">QLineEdit { 
-background: rgb(237, 237, 237); 
+background: rgb(245, 245, 245); 
 }</string>
      </property>
     </widget>
