--- a/taredialog.ui
+++ b/taredialog.ui
@@ -25,7 +25,7 @@
    <property name="title">
     <string>Select Load Cell</string>
    </property>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -65,7 +65,7 @@
     <string>Exit</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="tareButton">
    <property name="geometry">
     <rect>
      <x>50</x>
