--- a/calibrationwindow.ui
+++ b/calibrationwindow.ui
@@ -49,14 +49,14 @@ QGroupBox::title {
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QRadioButton" name="radioButton">
+      <widget class="QRadioButton" name="LeftLCButton">
        <property name="text">
         <string>Left Load Cell</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QRadioButton" name="radioButton_2">
+      <widget class="QRadioButton" name="RightLCButton">
        <property name="text">
         <string>Right Load Cell</string>
        </property>
@@ -65,7 +65,7 @@ QGroupBox::title {
     </layout>
    </widget>
   </widget>
-  <widget class="QCheckBox" name="checkBox">
+  <widget class="QCheckBox" name="CalibrationStart">
    <property name="geometry">
     <rect>
      <x>230</x>
@@ -78,7 +78,7 @@ QGroupBox::title {
     <string>Calibration Started</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox_2">
+  <widget class="QCheckBox" name="EmptyWeightRec">
    <property name="geometry">
     <rect>
      <x>230</x>
@@ -91,7 +91,7 @@ QGroupBox::title {
     <string>Empty Weight Recorded</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox_3">
+  <widget class="QCheckBox" name="TestWeightRec">
    <property name="geometry">
     <rect>
      <x>230</x>
@@ -104,7 +104,7 @@ QGroupBox::title {
     <string>Test Weight Recorded</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox_4">
+  <widget class="QCheckBox" name="CalibrationComplete">
    <property name="geometry">
     <rect>
      <x>230</x>
