--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -690,6 +690,21 @@ background: rgb(245, 245, 245);
      <string>Exit</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="messageDisp">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>20</y>
+      <width>191</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit { 
+background: rgb(245, 245, 245); 
+}</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
