--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,9 +17,9 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>420</x>
       <y>60</y>
-      <width>281</width>
+      <width>271</width>
       <height>81</height>
      </rect>
     </property>
@@ -44,7 +44,7 @@ QGroupBox::title {
       <rect>
        <x>20</x>
        <y>30</y>
-       <width>241</width>
+       <width>231</width>
        <height>25</height>
       </rect>
      </property>
@@ -82,10 +82,10 @@ QGroupBox::title {
    <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>10</y>
-      <width>371</width>
-      <height>471</height>
+      <width>391</width>
+      <height>481</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -107,10 +107,10 @@ QGroupBox::title {
     <widget class="QGroupBox" name="groupBox_2">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>300</y>
+       <x>70</x>
+       <y>310</y>
        <width>241</width>
-       <height>111</height>
+       <height>91</height>
       </rect>
      </property>
      <property name="title">
@@ -120,7 +120,7 @@ QGroupBox::title {
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>30</y>
+        <y>20</y>
         <width>184</width>
         <height>42</height>
        </rect>
@@ -145,10 +145,10 @@ QGroupBox::title {
      <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>80</y>
+        <x>40</x>
+        <y>60</y>
         <width>191</width>
-        <height>19</height>
+        <height>31</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -162,7 +162,7 @@ QGroupBox::title {
        <item>
         <widget class="QRadioButton" name="radioButton_4">
          <property name="text">
-          <string>CVS (Excel) File</string>
+          <string>CSV (Excel) File</string>
          </property>
         </widget>
        </item>
@@ -172,8 +172,8 @@ QGroupBox::title {
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>420</y>
+       <x>90</x>
+       <y>430</y>
        <width>201</width>
        <height>25</height>
       </rect>
@@ -213,7 +213,7 @@ background: rgb(245, 245, 245);
     <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>100</x>
        <y>20</y>
        <width>161</width>
        <height>171</height>
@@ -242,19 +242,19 @@ background: rgb(245, 245, 245);
        <widget class="QLineEdit" name="lineEdit_3"/>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit_4"/>
+       <widget class="QLineEdit" name="option1Line"/>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit_7"/>
+       <widget class="QLineEdit" name="option2Line"/>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>36</x>
        <y>20</y>
-       <width>37</width>
+       <width>51</width>
        <height>171</height>
       </rect>
      </property>
@@ -285,7 +285,7 @@ background: rgb(245, 245, 245);
       <item>
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Field 1:</string>
+         <string>Name:</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -295,7 +295,7 @@ background: rgb(245, 245, 245);
       <item>
        <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>Field 2:</string>
+         <string>Option 1:</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -305,7 +305,7 @@ background: rgb(245, 245, 245);
       <item>
        <widget class="QLabel" name="label_13">
         <property name="text">
-         <string>Field 3:</string>
+         <string>Option 2:</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -343,45 +343,10 @@ background: rgb(245, 245, 245);
     <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
-       <x>40</x>
-       <y>210</y>
-       <width>291</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QLabel" name="label_6">
-        <property name="text">
-         <string>Averaging Time</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="avgTimeWindow">
-        <property name="styleSheet">
-         <string notr="true">QLineEdit { 
-background: rgb(245, 245, 245); 
-}</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="selectTimeButton">
-        <property name="text">
-         <string>Select Time</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-    <widget class="QWidget" name="">
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>250</y>
-       <width>291</width>
-       <height>25</height>
+       <x>30</x>
+       <y>230</y>
+       <width>331</width>
+       <height>31</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -401,6 +366,73 @@ background: rgb(245, 245, 245);
         </property>
        </widget>
       </item>
+     </layout>
+    </widget>
+    <widget class="QPushButton" name="selectTimeButton">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>200</y>
+       <width>75</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Select Time</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="avgTimeWindow">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>201</y>
+       <width>161</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLineEdit { 
+background: rgb(245, 245, 245); 
+}</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_6">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>201</y>
+       <width>74</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Averaging Time</string>
+     </property>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>101</x>
+       <y>260</y>
+       <width>261</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="defaultFilename">
+        <property name="text">
+         <string>Auto-Filename</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="selectFolderButton">
+        <property name="text">
+         <string>Select Folder</string>
+        </property>
+       </widget>
+      </item>
       <item>
        <widget class="QPushButton" name="selectFileButton">
         <property name="text">
@@ -416,16 +448,18 @@ background: rgb(245, 245, 245);
     <zorder>layoutWidget</zorder>
     <zorder>groupBox_2</zorder>
     <zorder>layoutWidget</zorder>
-    <zorder>lineEdit_7</zorder>
+    <zorder>option2Line</zorder>
     <zorder>label_13</zorder>
     <zorder>label_6</zorder>
+    <zorder>defaultFilename</zorder>
+    <zorder>selectFolderButton</zorder>
    </widget>
    <widget class="QGroupBox" name="groupBox_4">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>420</x>
       <y>170</y>
-      <width>281</width>
+      <width>271</width>
       <height>81</height>
      </rect>
     </property>
@@ -450,7 +484,7 @@ QGroupBox::title {
       <rect>
        <x>20</x>
        <y>30</y>
-       <width>241</width>
+       <width>231</width>
        <height>25</height>
       </rect>
      </property>
@@ -488,10 +522,10 @@ QGroupBox::title {
    <widget class="QGroupBox" name="groupBox_5">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>420</x>
       <y>280</y>
-      <width>281</width>
-      <height>201</height>
+      <width>271</width>
+      <height>211</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -510,39 +544,11 @@ QGroupBox::title {
     <property name="title">
      <string>Most Recent Data</string>
     </property>
-    <widget class="QLabel" name="label_5">
+    <widget class="QCheckBox" name="sensorOnBox">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>61</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Controller is </string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="controllerStatus">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>20</y>
-       <width>201</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QLineEdit { 
-background: rgb(245, 245, 245); 
-}</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox">
-     <property name="geometry">
-      <rect>
-       <x>210</x>
-       <y>50</y>
+       <x>190</x>
+       <y>70</y>
        <width>70</width>
        <height>17</height>
       </rect>
@@ -554,9 +560,9 @@ background: rgb(245, 245, 245);
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>70</y>
-       <width>81</width>
+       <x>60</x>
+       <y>80</y>
+       <width>121</width>
        <height>101</height>
       </rect>
      </property>
@@ -574,7 +580,13 @@ background: rgb(245, 245, 245);
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="field4Meas"/>
+         <widget class="QLineEdit" name="field4Meas">
+          <property name="styleSheet">
+           <string notr="true">QLineEdit { 
+background: rgb(245, 245, 245); 
+}</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -591,53 +603,13 @@ background: rgb(245, 245, 245);
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="field5Meas"/>
-        </item>
-       </layout>
-      </item>
-     </layout>
-    </widget>
-    <widget class="QWidget" name="layoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>70</y>
-       <width>71</width>
-       <height>101</height>
-      </rect>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_11">
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout_6">
-        <item>
-         <widget class="QLabel" name="label_8">
-          <property name="text">
-           <string>Field 4</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
+         <widget class="QLineEdit" name="field5Meas">
+          <property name="styleSheet">
+           <string notr="true">QLineEdit { 
+background: rgb(245, 245, 245); 
+}</string>
           </property>
          </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="field4Line"/>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout_8">
-        <item>
-         <widget class="QLabel" name="label_11">
-          <property name="text">
-           <string>Field 5</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="field5Line"/>
         </item>
        </layout>
       </item>
@@ -647,34 +619,104 @@ background: rgb(245, 245, 245);
      <property name="geometry">
       <rect>
        <x>190</x>
-       <y>80</y>
+       <y>100</y>
        <width>71</width>
        <height>91</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_12">
       <item>
-       <widget class="QCheckBox" name="checkBox_2">
+       <widget class="QCheckBox" name="leftReceivingBox">
         <property name="text">
          <string>Receiving</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QCheckBox" name="checkBox_3">
+       <widget class="QCheckBox" name="dataSavingBox">
         <property name="text">
          <string>Saving</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QCheckBox" name="checkBox_4">
+       <widget class="QCheckBox" name="rightReceivingBox">
         <property name="text">
          <string>Receiving</string>
         </property>
        </widget>
       </item>
      </layout>
+    </widget>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>29</x>
+       <y>100</y>
+       <width>31</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>8</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Left</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>30</y>
+       <width>231</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_6">
+      <item>
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Controller is </string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="controllerStatus">
+        <property name="styleSheet">
+         <string notr="true">QLineEdit { 
+background: rgb(245, 245, 245); 
+}</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QLabel" name="label_11">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>8</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Right</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
     </widget>
    </widget>
    <widget class="QPushButton" name="exitButton">
@@ -688,21 +730,6 @@ background: rgb(245, 245, 245);
     </property>
     <property name="text">
      <string>Exit</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="messageDisp">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>20</y>
-      <width>191</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLineEdit { 
-background: rgb(245, 245, 245); 
-}</string>
     </property>
    </widget>
   </widget>
