--- a/avgtimeselection.ui
+++ b/avgtimeselection.ui
@@ -49,7 +49,7 @@
     <string>Exit</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>60</x>
@@ -60,9 +60,9 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="defaultButton">
       <property name="text">
-       <string>Get</string>
+       <string>Default</string>
       </property>
      </widget>
     </item>
