--- a/settingsdialog.ui
+++ b/settingsdialog.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Select ComPort</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="resources.qrc">
+    <normaloff>:/qresource/icon_200x200.png</normaloff>:/qresource/icon_200x200.png</iconset>
+  </property>
   <layout class="QGridLayout" name="gridLayout_3">
    <item row="0" column="0">
     <widget class="QGroupBox" name="selectBox">
@@ -107,6 +111,8 @@ QGroupBox::title {
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
